[package]
name = "namaka"
version = "0.2.1"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Snapshot testing for Nix based on haumea"
readme = "README.md"
homepage = "https://github.com/figsoda/namaka"
repository = "https://github.com/figsoda/namaka"
license = "MPL-2.0"
keywords = ["assert", "cli", "nix", "snapshot", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
bstr = "1.11.1"
color-eyre = "0.6.3"
ctrlc = "3.4.5"
dialoguer = "0.11.0"
eyre = "0.6.12"
monostate = "0.1.13"
owo-colors = "4.1.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
similar = { version = "2.6.0", features = ["unicode"] }
toml = "0.8.19"

[dependencies.bat]
version = "0.24.0"
default-features = false
features = ["regex-onig"]

[dependencies.clap]
version = "4.5.21"
features = ["cargo", "derive", "unicode", "wrap_help"]

[build-dependencies]
clap = { version = "4.5.21", features = ["derive", "string"] }
clap_complete = "4.5.38"
clap_mangen = "0.2.24"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
