[package]
name = "namaka"
version = "0.2.1"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Snapshot testing for Nix based on haumea"
readme = "README.md"
homepage = "https://github.com/figsoda/namaka"
repository = "https://github.com/figsoda/namaka"
license = "MPL-2.0"
keywords = ["assert", "cli", "nix", "snapshot", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
bstr = "1.12.1"
color-eyre = "0.6.5"
ctrlc = "3.5.2"
dialoguer = "0.12.0"
eyre = "0.6.12"
monostate = "1.0.2"
owo-colors = "4.3.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.149"
similar = { version = "2.7.0", features = ["unicode"] }
toml = "1.0.3"

[dependencies.bat]
version = "0.25.0"
default-features = false
features = ["regex-onig"]

[dependencies.clap]
version = "4.5.60"
features = ["cargo", "derive", "unicode", "wrap_help"]

[build-dependencies]
clap = { version = "4.5.60", features = ["derive", "string"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
